--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -10,8 +13,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-resize-aware": "^3.1.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.3.2",
+    "save": "^2.4.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
