--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.3",
     "git": "^0.1.5",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-icons": "^4.3.1",
     "react-resize-aware": "^3.1.1",
     "react-router-dom": "^6.0.2",
