--- a/package.json
+++ b/package.json
@@ -9,19 +9,24 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "git": "^0.1.5",
+    "rc-tabs": "^11.10.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
     "react-icons": "^4.3.1",
+    "react-pro-sidebar": "^0.7.1",
     "react-resize-aware": "^3.1.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-spring": "^9.3.2",
     "save": "^2.4.0",
     "styled-components": "^5.3.3",
+    "swiper": "^7.3.4",
+    "swiper-react": "^1.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -49,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.16"
+    "@types/styled-components": "^5.1.16",
+    "sass": "^1.49.0"
   }
 }
